# X

./: .gitignore  CMakeLists.txt  fixed.cpp  main.cpp
assets/shaders/: FSH-Camera3D.glsl  FSH-Default.glsl  VSH-Camera3D.glsl  VSH-Default.glsl
include/X/: Entity.h  Game.h  GameObject.h  Global.h  Object.h  Renderer.h  Sprite.h  Transform.h  Types.h
include/X/Math/: Random.h
src/X/: Entity.cpp  Game.cpp  GameObject.cpp  Object.cpp  Renderer.cpp  Sprite.cpp  Transform.cpp
src/X/System/: Engine.cpp  Window.cpp
